Changelog for FormItBuilder.

FormItBuilder 0.1.8-beta
====================================
- Added ability to alter dynamic emailTpl

FormItBuilder 0.1.7-beta
====================================
- Fixed escaping issues for special characters (Should have been using htmlspecialchars instead of htmlentities)
- Added methods for outputRaw and postHookRaw to allow a raw dump of formIt syntax and emailChunkSyntax.

FormItBuilder 0.1.6-beta
====================================
- Documentation Updates and small tweak to example snippet

FormItBuilder 0.1.5-beta
====================================
- First public release. Still a big work in progress.